# quillguard

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  convert_gramformer.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  setup_models.sh
lserver/: Cargo.toml  README.md
lserver/src/: main.rs
lserver/src/lang/: grammar.rs  lint.rs  mod.rs  state.rs  t5_native.rs  t5_native_old.rs
src/: entry.fastify.tsx
src/components/editor/: index.tsx
src/grammar/: index.ts  overlaycss.ts
src/plugins/: header.ts  index.ts  paragraph.ts
src/routes/: index.tsx
