[package]
name = "lserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
harper-core = { version = "0.72.0", features = ["concurrent"] }
# ML dependencies for ONNX T5 inference
ort = "=2.0.0-rc.10"
hf-hub = "0.4.3"
tokenizers = "0.22.1"
anyhow = "1.0"
ndarray = "0.15"

[dev-dependencies]
